# OEP-macos

./: .gitignore  .gitmodules  AppDelegate.swift  BNBObjCHeaders.h  CMakeLists.txt  README.md  ViewController.swift
bnb_sdk/: CMakeLists.txt
cmake/: utils.cmake
interfaces/: effect_player_metal_extension.hpp  formats.hpp  offscreen_effect_player.hpp  offscreen_render_target.hpp  offscreen_render_target_metal_extension.hpp  pixel_buffer.hpp  pixel_data.hpp
libraries/: CmakeLists.txt
libraries/objcpp_helper/: CmakeLists.txt
libraries/objcpp_helper/include/: BNBFullImageData+Private.h
libraries/objcpp_helper/src/: BNBFullImageData+Private.mm  BNBFullImageData.m
libraries/utils/ogl_utils/include/: opengl.hpp  program.hpp
libraries/utils/ogl_utils/src/: opengl.cpp  program.cpp
libraries/utils/utils/include/: thread_pool.h
m_interfaces/: effect_player.hpp  offscreen_render_target.hpp
oep_framework/: CMakeLists.txt
oep_framework/oep/: BNBFullImageData+Private.mm  BNBFullImageData.h  BNBFullImageData.mm  BNBOffscreenEffectPlayer.h  BNBOffscreenEffectPlayer.mm  conversion.cpp  conversion.hpp  effect_player.cpp  effect_player.hpp
offscreen_effect_player/: CMakeLists.txt
offscreen_effect_player/include/: BNBOffscreenEffectPlayer.h  offscreen_effect_player.hpp  pixel_buffer.hpp  pixel_data.hpp
offscreen_effect_player/src/: BNBOffscreenEffectPlayer.mm  offscreen_effect_player.cpp  pixel_buffer.cpp  pixel_data.cpp
offscreen_render_target/: CMakeLists.txt
offscreen_render_target/include/: BNBCopyableMetalLayer.h  offscreen_render_target.h  offscreen_render_target.hpp  utils.h
offscreen_render_target/src/: ns_context.mm  offscreen_render_target.cpp  offscreen_render_target.mm  utils.mm
resources/: Info.plist  Main.storyboard  OEPShaders.metal  OEPShaders.metallib  bnb_viewer.icns
resources/effects/Afro/: config.json
resources/effects/Afro/shaders/: Default.frag  retouch.frag  retouch.vert
toolchain/: pack_framework.sh
